# jwst_rogue_path_tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst  jwst_rogue_path_tool.rst
env/: jwst_rogue_path_env_py3.9.yml
jwst_rogue_path/notebooks/: Demo_claws_and_bck_tool.ipynb
jwst_rogue_path/src/: claws_tool.py
jwst_rogue_path_tool/: apt_sql_parser.py  constants.py  detect_claws.py  fixed_angle.py  plotting.py  utils.py
jwst_rogue_path_tool/data/: APT_test_4RPtool.records.json  rogue_path_nrca.fits  rogue_path_nrcb.fits  two_mass_kmag_lt_5.csv
jwst_rogue_path_tool/jwst_rogue_path_tool/: apt_sql_parser.py  constants.py  detect_claws.py  plotting.py  utils.py
jwst_rogue_path_tool/notebooks/: jwst_rogue_path_tool_demo.ipynb
jwst_rogue_path_tool/original_src/: claws_tool.py
jwst_rogue_path_tool/scripts/: output_results.py
jwst_rogue_path_tool/src/: claws_tool.py  utils.py
jwst_rogue_path_tool/tests/: test_apt_json_parser.py  test_apt_sql_parser.py  test_utils.py
